Updated deployment location